# backend/api/routes/UserRoutes.go
@@ -11,10 +11,14 @@ import (
 func SetupUserRoutes(app *fiber.App){
 	//autuser
 	app.Get("/user/getUser/:id",  controllers.GetUserByID)
+	// getSug
+	app.Get("/user/getSug",controllers.GetSugUser)
 
 	//Update
 	app.Patch("/user/Update/:id", middleware.AuthMiddleware , controllers.UpdateUser)
 	//following
 	app.Patch("/user/:id/follow", middleware.AuthMiddleware , controllers.FollowingUser)
+	//delete
+	app.Delete("/user/delete/:id", middleware.AuthMiddleware , controllers.DeleteUser)
 
 }
